to be completed from word

--- a/TEX/file3.tex
+++ b/TEX/file3.tex
@@ -1,5 +1,10 @@
-\chapter{Solutions}
-\section{Simulation}
-\section{}
-\section{}
-\section{}
+\chapter{Challenges}
+\section{Problem statement}
+\section{Study of the existing design}
+\subsection{Hardware}
+\subsubsection{Analog design overview (PCB)}
+\subsubsection{Digital design overview (HDL)}
+\subsection{Software}
+\subsubsection{Micro-controller (ADUC)}
+\subsubsection{GUI interface (Java)}
+\section{Specifications \& targets}
