--- a/TEX/file4.tex
+++ b/TEX/file4.tex
@@ -1,2 +1,26 @@
-\chapter{Conclusion}
-\section{}
+\chapter{Solutions}
+\section{Simulation of FM transmitter}
+\section{HDL design debugging}
+\section{Steps of the solution}
+\section{Hardware design (PCB) upgrades}
+\subsection{Input filters}
+\subsection{Output filters}
+
+
+\section{FPGA design (HDL) upgrades}
+
+\subsection{Optimizations for resources \& power}
+
+\subsubsection{Decimation}
+\subsubsection{Decrease of FIRs orders}
+
+\subsection{Increase of channels}
+
+\subsection{Vivado (FPGA) reports}
+
+
+
+
+\section{Software upgrades}
+\subsection{Micro-controller ADUC (Embedded System)}
+\subsection{GUI interfaces (Java)}
