--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,21 @@
 \documentclass[a4paper,10pt]{report}
 \usepackage[utf8]{inputenc}
 
+\usepackage{geometry}
+% define hmagin & vmargin 
+\geometry{hmargin=3cm, vmargin=3cm}
+
+
+
+\usepackage{hyperref}
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = blue, %Colour for external hyperlinks
+  linkcolor    = blue, %Colour of internal links
+  citecolor   = red %Colour of citations
+}
+
+
 % Title Page
 \title{\textbf{FM Repeater Upgrade} \\
 MSc. Advanced Electronic Systems Engineering (2018-19) \\
@@ -34,7 +49,7 @@ Supervisor (Academia): Jean-Marie Bilbault
 \input{TEX/file3}
 \input{TEX/file4}
 \input{TEX/file5}
-
+\input{TEX/file6}
 
 
 \end{document}          
