--- a/TEX/file2.tex
+++ b/TEX/file2.tex
@@ -1,9 +1,5 @@
-\chapter{Challenges}
-\section{Problem statement}
-\section{Study of the existing design}
-\subsection{Hardware}
-\subsubsection{Analog design (PCB)}
-\subsubsection{Digital design (HDL)}
-\subsection{Software}
-\subsubsection{Micro-controller (ADUC)}
-\subsubsection{GUI interface (Java)}
+\section{Background}
+
+\subsection{FM standard}
+\subsection{Repeaters}
+\subsection{SDR8 repeater}
